k8s-resources/zabbix/zabbix-server-1-ss.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    k8s-app: zabbix-server-1
    zabbix-app: server
  name: zabbix-server-1
  namespace: zabbix
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: zabbix-server-1
  serviceName: zabbix-server
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: zabbix-server-1
        name: zabbix-server
      namespace: zabbix
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: zabbix-server-1-envs
                optional: false
            - secretRef:
                name: zabbix-db-secrets
                optional: false
          image: larasxavier/zabbix-server-mysql:6.0.23-centos
          imagePullPolicy: IfNotPresent
          name: zabbix-server
          ports:
            - containerPort: 10051
              name: 10051tcp
              protocol: TCP
          resources:
            requests:
              cpu: 250m
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  updateStrategy:
    type: RollingUpdate
