k8s-resources/zabbix/mysql-server-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-server
  name: mysql-server
  namespace: zabbix
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: mysql-server
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
