k8s-resources/zabbix/zabbix-agent-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: zabbix-agent
  name: zabbix-agent
  namespace: zabbix
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: '10050'
      port: 10050
      protocol: TCP
      targetPort: 10050
  selector:
    k8s-app: zabbix-agent
  sessionAffinity: None
  type: ClusterIP
