k8s-resources/zabbix/zabbix-server-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server
  namespace: zabbix
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 10051
      protocol: TCP
      targetPort: 10051
  selector:
    k8s-app: zabbix-server-1
  sessionAffinity: None
  type: ClusterIP
