k8s-resources/zabbix/zabix-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web
  namespace: zabbix
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    k8s-app: zabbix-web
  sessionAffinity: None
  type: ClusterIP
